[build-system]
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "starterkit_ci"
dynamic = ["version"]

description = "Helpers for Starterkit Continuous Integration"
readme = "README.md"
requires-python = ">=3.8"

license = { file = "LICENSE.md" }

authors = [
  { name = "LHCb Starterkit" },
]

keywords = ["Starterkit"]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.3",
  "myst-parser[linkify]>=3.0",
  "nbsphinx>=0.9",
]

[project.urls]
"Homepage" = "https://github.com/lhcb/starterkit_ci"
"Bug Reports" = "https://github.com/lhcb/starterkit-ci/issues"
"Source" = "https://github.com/lhcb/starterkit-ci"

[project.scripts]
starterkit_ci = "starterkit_ci:parse_args"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
starterkit_ci = [
  "sphinx_config/_static/*",
  "sphinx_config/_static/**/*",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=cirun --cov-report=term-missing"
