[build-system]
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "starterkit_ci"
dynamic = ["version"]

description = "Helpers for Starterkit Continuous Integration"
readme = "README.md"
requires-python = ">=3.8"

license = "BSD-3-Clause"
license-files = ["LICENSE"]

authors = [
  { name = "LHCb Starterkit" },
]

keywords = ["Starterkit"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.3",
  "myst-parser[linkify]>=3.0",
  "nbsphinx>=0.9",
]

[project.urls]
"Homepage" = "https://github.com/lhcb/starterkit-ci"
"Bug Reports" = "https://github.com/lhcb/starterkit-ci/issues"
"Source" = "https://github.com/lhcb/starterkit-ci"

[project.scripts]
starterkit_ci = "starterkit_ci:parse_args"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
starterkit_ci = [
  "sphinx_config/_static/*",
  "sphinx_config/_static/**/*",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=cirun --cov-report=term-missing"
